# VNDecorrelate

./: .gitignore  CITATION.cff  README.md  __init__.py  decorrelation.py  decorrelator.py  haas_delay.py  plot.py  pyproject.toml  requirements.txt  requirements_dev.txt.txt  setup.py  timing.py  velvet_noise.py  vnDecorrelate.py  vnd.py
.github/workflows/: release.yaml  test-vnd.yaml
VNDecorrelate/: __init__.py  decorrelation.py  example.py  test.py  vnd.py
VNDecorrelate/utils/: __init__.py  dsp.py  plot.py
src/vndecorrelate/: decorrelation.py  optimization.py
src/vndecorrelate/utils/: dsp.py  plot.py
test/: __init__.py  test_decorrelation.py  test_dsp.py  test_plot.py
tests/: __init__.py  conftest.py  test_decorrelation.py  test_dsp.py  test_example.py  test_optimization.py  test_plot.py
utils/: __init__.py  dsp.py  plot.py  timing.py
vndecorrelate/: decorrelation.py  optimization.py
vndecorrelate/utils/: dsp.py  plot.py
